# relearn_django

./: pyproject.toml
myproject/: settings.py
